fixed bugs raised durigng ppre grading: deck edit form, card text overflow, class name formatting issues

--- a/react-app/src/components/DashboardRightClasses/DashboardRightClasses.css
+++ b/react-app/src/components/DashboardRightClasses/DashboardRightClasses.css
@@ -27,10 +27,12 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .dashboard-right-class-name {
-    padding-top: 15%;
+    padding-right: 2rem;
+    word-break: break-word;
     font-size: 2rem;
     font-weight: bold;
     color: #197096;
